fix sminchiamento con firefox vecchio

--- a/src/app/tabelle/attivita/attivita.component.css
+++ b/src/app/tabelle/attivita/attivita.component.css
@@ -25,5 +25,8 @@
     padding: 10px;
 }
 .column-class{
-    word-break: break-word;
+    word-break: break-all;
+    word-wrap: break-word;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
 }
